# TSP_VQC

./: .buildinfo  .gitattributes  .gitignore  AWS_minimal.ipynb  Classical_ML1.ipynb  Classical_ML_manual_runs.ipynb  README.md  VQC._manual_runs.ipynb  VQC.ipynb  VQC_auto_runs.ipynb  VQC_gradients.ipynb  VQC_manual_runs.ipynb  VQC_production.ipynb  VQC_v2.ipynb  VQC_v3.ipynb  auto_runs.ipynb  auto_runs_AWS.ipynb  bit_strings_ranked_by_distance.ipynb  classes.html  environment.yml  genindex.html  graph_functions.py  helper_functions_tsp.py  hot_start_analysis.ipynb  index.html  main.py  make_data.ipynb  manual_runs_ML.ipynb  manual_runs_VQC.ipynb  manual_runs_VQC_AWS.ipynb  modules.html  monte_carlo.ipynb  nevergrad_comparison.ipynb  objects.inv  plot_data.ipynb  py-modindex.html  pyproject.toml  quantum_functions.py  resource_requirements.ipynb  search.html  (+6 more)
.github/: CODEOWNERS
No push/: VQC_IBM_demo.ipynb  VQC_gradients2.ipynb  quantum_functions.py  test.ipynb  test2.ipynb  test_support.ipynb
_modules/: index.html
_sources/: classes.rst.txt  modules.rst.txt
classes/: DataLogger.py  LRUCacheUnhashable.py  MyDataLogger.py  MyModel.py
control/: control_parameters.csv
data/: dg11_d.txt
docs/: conf.py  index.rst  modules.rst
modules/: AWS_config.py  AWS_helper_functions_tsp.py  config.py  graph_functions.py  helper_ML_functions.py  helper_functions_general.py  helper_functions_nevergrad.py  helper_functions_quantum.py  helper_functions_tsp.py  helper_results.py  quantum_circuits.py  test.ipynb  test_ML_functions.py  test_gpu.ipynb  test_helper_general.py  (+2 more)
(+5805 files in other folders)
