[project]
name = "tsp-vqc"
version = "0.1.0"
description = "Travelling Salesman optimisation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "graycode>=1.0.5",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "np>=1.0.2",
    "pandas>=2.3.1",
    "pathlib>=1.0.1",
    "pip>=25.2",
    "pylatexenc>=2.10",
    "pytest>=8.4.1",
    "qiskit>=2.1.2",
    "qiskit-aer>=0.17.1",
    "qiskit-ibm-runtime>=0.41.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
    "torch",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "torchviz>=0.0.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
